--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  background-image: radial-gradient( circle 815px at 23.4% -21.8%,  rgba(9,29,85,1) 0.2%, rgba(0,0,0,1) 100.2% );
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,19 +15,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+li {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: wavy;
 }
-a:hover {
+li:hover {
   color: #535bf2;
+  cursor: pointer;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -48,6 +50,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
+  color: #646cff;
 }
 button:focus,
 button:focus-visible {
